# fluent-mind-mcp

./: .env.example  .gitignore  .mcp.json  .python-version  CLAUDE.md  CLAUDE_DESKTOP_TEST.md  CLAUDE_INTEGRATION.md  CODE_QUALITY_REVIEW.md  FLOWISE_API.md  OVERVIEW.md  README.md  REFACTORING_SUMMARY.md  T102-T104_SUMMARY.md  T105-T108_SUMMARY.md  T115_CODE_DUPLICATION_REFACTORING.md  VERIFICATION.md  pyproject.toml  verify_phase5.py
.specify/mcp-servers/: workflows.md
.specify/memory/: INDEX.md  cicd.md  constitution.md  glossary.md  governance.md  team-adaptations.md
docs/: AI_WEB_ASSISTANT_SUMMARY.md  API_FIELD_COMPARISON.md  CONNECT_NODES.md  FLOWISE_CHATFLOW_FINDINGS.md  FLOWISE_INTEGRATION_SUMMARY.md  FLOWISE_SOURCE_CODE_ANALYSIS.md  HOW_TO_CONNECT_NODES.md  NODE_ID_BUG_VERIFICATION.md  PORT_CONNECTIONS_GUIDE.md  README.md  flowise-node-connection-logic.md
docs/flowise_architecture/: 01-overview.md  02-monorepo-structure.md  INDEX.md  README.md  SUMMARY.md
examples/: README.md  USAGE.md  create_example_flows.py  push_flow.py
examples/flows/: README.md  chat_with_memory.yaml  rag_flow.yaml  simple_chat.yaml  test_3node.yaml
examples/generated_flows/: GENERATION_SUCCESS.md  README.md  agent_flow.json  agent_flow_flowdata.json  chat_with_memory.json  chat_with_memory_flowdata.json  rag_flow.json  rag_flow_flowdata.json  simple_chat.json  simple_chat_flowdata.json
examples/node_templates/: ChatCustomLLM_v1.json  INDEX.json  QUICK_REFERENCE.md  README.md  agentAgentflow.json  bufferMemory.json  bufferWindowMemory.json  chatAnthropic.json  chatLocalAI.json  chatOpenAI.json  chatPromptTemplate.json  cheerioWebScraper.json  conditionAgentAgentflow.json  conditionAgentflow.json  conversationChain.json  conversationalRetrievalQAChain.json  createFolderStructure.json  currentDateTime.json  customMCP.json  customRetriever.json  directReplyAgentflow.json  documentStore.json  documentStoreVS.json  faiss.json  googleCalendarTool.json  htmlToMarkdownTextSplitter.json  inMemoryCache.json  iterationAgentflow.json  llmAgentflow.json  loopAgentflow.json  memoryVectorStore.json  node_builder.py  node_cleanup.py  openAIEmbeddings.json  readFile.json  retrieverTool.json  slackMCP.json  startAgentflow.json  stickyNote.json  stickyNoteAgentflow.json  (+4 more)
scripts/: README.md  verify_phases.py
specs/001-flowise-mcp-server/: data-model.md  plan.md  plan_cc.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-flowise-automation-workflow/: 01-overview-architecture.md  02-layer1-mcp-server.md  03-layer2-vector-search-service.md  04-layer2-build-flow-service.md  05-layer2-catalog-service.md  06-layer2-circuit-workflow-services.md  07-layer3-clients.md  08-layer4-models.md  09-error-logging.md  10-testing-manual-checklists.md  11-testing-automated-utilities.md  12-implementation-phases.md  13-success-criteria-observability.md  14-deployment-summary.md  ANALYSIS_REMEDIATION_REPORT.md  assumptions.md  data-model.md  dependencies.md  edge-cases.md  out-of-scope.md  plan.md  plan_cc.md  quickstart.md  research.md  spec.md  split_remaining.sh  split_spec.sh  success-criteria.md  tasks.md
src/fluent_mind_mcp/: __init__.py  server.py
tests/: PHASE1_TESTS_README.md  conftest.py
tests/acceptance/: test_user_story_1.py  test_user_story_2.py  test_user_story_3.py  test_user_story_4.py  test_user_story_5.py
tests/checklists/: user_story_1_checklist.md  user_story_2_checklist.md  user_story_3_checklist.md
tests/integration/: test_concurrency.py  test_error_scenarios.py  test_full_lifecycle.py  test_performance.py  test_security.py
tests/unit/: test_chatflow_service.py  (+4 more)
(+695 files in other folders)
